upgrade giter8 and sbt versions